@@ -421,6 +421,12 @@ name|LOCK_TYPE_NONE
 init|=
 literal|"none"
 decl_stmt|;
+DECL|field|checkIntegrityAtMerge
+specifier|public
+specifier|final
+name|boolean
+name|checkIntegrityAtMerge
+decl_stmt|;
 comment|/**    * Internal constructor for setting defaults based on Lucene Version    */
 annotation|@
 name|SuppressWarnings
@@ -501,6 +507,10 @@ expr_stmt|;
 name|mergedSegmentWarmerInfo
 operator|=
 literal|null
+expr_stmt|;
+name|checkIntegrityAtMerge
+operator|=
+literal|false
 expr_stmt|;
 block|}
 comment|/**    * Constructs a SolrIndexConfig which parses the Lucene related config params in solrconfig.xml    * @param solrConfig the overall SolrConfig object    * @param prefix the XPath prefix for which section to parse (mandatory)    * @param def a SolrIndexConfig instance to pick default values from (optional)    */
@@ -974,6 +984,21 @@ literal|"Supplying a mergedSegmentWarmer will do nothing since nrtMode is false"
 argument_list|)
 throw|;
 block|}
+name|checkIntegrityAtMerge
+operator|=
+name|solrConfig
+operator|.
+name|getBool
+argument_list|(
+name|prefix
+operator|+
+literal|"/checkIntegrityAtMerge"
+argument_list|,
+name|def
+operator|.
+name|checkIntegrityAtMerge
+argument_list|)
+expr_stmt|;
 block|}
 comment|/*    * Assert that assertCondition is true.    * If not, prints reason as log warning.    * If failCondition is true, then throw exception instead of warning     */
 DECL|method|assertWarnOrFail
@@ -1259,6 +1284,13 @@ name|warmer
 argument_list|)
 expr_stmt|;
 block|}
+name|iwc
+operator|.
+name|setCheckIntegrityAtMerge
+argument_list|(
+name|checkIntegrityAtMerge
+argument_list|)
+expr_stmt|;
 return|return
 name|iwc
 return|;
