@@ -26,5 +26,6 @@
     <maxIndexingThreads>123</maxIndexingThreads>
     <infoStream>true</infoStream>
     <mergePolicy class="org.apache.solr.util.RandomMergePolicy" />
+    <checkIntegrityAtMerge>true</checkIntegrityAtMerge>
   </indexConfig>
 </config>
