@@ -18,25 +18,15 @@ end_comment
 
 begin_import
 import|import
-name|java
-operator|.
-name|io
-operator|.
-name|File
-import|;
-end_import
-
-begin_import
-import|import
 name|org
 operator|.
 name|apache
 operator|.
-name|solr
+name|lucene
 operator|.
-name|core
+name|index
 operator|.
-name|TestMergePolicyConfig
+name|ConcurrentMergeScheduler
 import|;
 end_import
 
@@ -88,20 +78,6 @@ name|org
 operator|.
 name|apache
 operator|.
-name|lucene
-operator|.
-name|index
-operator|.
-name|ConcurrentMergeScheduler
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
 name|solr
 operator|.
 name|SolrTestCaseJ4
@@ -119,6 +95,20 @@ operator|.
 name|core
 operator|.
 name|SolrConfig
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|core
+operator|.
+name|TestMergePolicyConfig
 import|;
 end_import
 
@@ -157,6 +147,50 @@ operator|.
 name|junit
 operator|.
 name|Test
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|xml
+operator|.
+name|sax
+operator|.
+name|SAXException
+import|;
+end_import
+
+begin_import
+import|import
+name|javax
+operator|.
+name|xml
+operator|.
+name|parsers
+operator|.
+name|ParserConfigurationException
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|io
+operator|.
+name|File
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|io
+operator|.
+name|IOException
 import|;
 end_import
 
@@ -421,6 +455,93 @@ argument_list|,
 name|ms
 operator|.
 name|getMaxThreadCount
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+annotation|@
+name|Test
+DECL|method|testCheckIntegrityAtMerge
+specifier|public
+name|void
+name|testCheckIntegrityAtMerge
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|SolrConfig
+name|solrConfig
+init|=
+operator|new
+name|SolrConfig
+argument_list|(
+literal|"solr"
+operator|+
+name|File
+operator|.
+name|separator
+operator|+
+literal|"collection1"
+argument_list|,
+literal|"solrconfig-indexconfig.xml"
+argument_list|,
+literal|null
+argument_list|)
+decl_stmt|;
+name|SolrIndexConfig
+name|solrIndexConfig
+init|=
+operator|new
+name|SolrIndexConfig
+argument_list|(
+name|solrConfig
+argument_list|,
+literal|null
+argument_list|,
+literal|null
+argument_list|)
+decl_stmt|;
+name|assertNotNull
+argument_list|(
+name|solrIndexConfig
+operator|.
+name|checkIntegrityAtMerge
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|solrIndexConfig
+operator|.
+name|checkIntegrityAtMerge
+argument_list|)
+expr_stmt|;
+name|IndexSchema
+name|indexSchema
+init|=
+name|IndexSchemaFactory
+operator|.
+name|buildIndexSchema
+argument_list|(
+literal|"schema.xml"
+argument_list|,
+name|solrConfig
+argument_list|)
+decl_stmt|;
+name|IndexWriterConfig
+name|iwc
+init|=
+name|solrIndexConfig
+operator|.
+name|toIndexWriterConfig
+argument_list|(
+name|indexSchema
+argument_list|)
+decl_stmt|;
+name|assertTrue
+argument_list|(
+name|iwc
+operator|.
+name|getCheckIntegrityAtMerge
 argument_list|()
 argument_list|)
 expr_stmt|;
